Loan forms style

--- a/components/quiz.html
+++ b/components/quiz.html
@@ -69,14 +69,12 @@ p {
     line-height: 26px;
     text-align: center;
     background-color: var(--color-white);
-    border: 1px solid #BBBBBB;
     color: var(--button-color-blue);
     border-radius: 4px;
-    display: flex;
-    justify-content: center;
+    display: inline-block;
     align-items: center;
     border: 2px solid var(--button-color-blue);
-
+    padding: 0 1rem;
 }
 
 .button input[type="radio"] {
