--- a/components/loanforms.html
+++ b/components/loanforms.html
@@ -7,11 +7,11 @@
         height: fit-content;
         width: 100%;
         padding: 1rem;
-        border: 1px solid black;
         margin: 0 0 2rem 0;
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        margin-top: 96px;
     }
     .category-forms-container-required {
         height: fit-content;
