--- a/components/loanforms.html
+++ b/components/loanforms.html
@@ -1,4 +1,20 @@
 <style>
+
+    .title-holder {
+        margin-top: 52px;
+    }
+
+    .return-form-suport {
+        font-family: 'Public Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 26px;
+        text-decoration: underline;
+        color: #006546;
+        padding: 24px 0 24px;
+    }
+
     .container-spacer-bottom {
         height:10rem;
     }
@@ -13,99 +29,137 @@
         gap: 1rem;
         margin-top: 96px;
     }
-    .category-forms-container-required {
-        height: fit-content;
-        width: 100%;
-        padding: 2rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
 
-    .category-forms-holder {
+    .category-forms-container-reuired {
         width: 100%;
         height: fit-content;
-        padding: 2rem;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 1rem;
     }
-        .category-forms-title {
-                font-size: large;
-            }
-        .category-forms-message {
-            
+        .category-forms-holder-title {
+            font-family: 'Public Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 22px;
+            line-height: 26px;
+            color: #000000;
+            margin: 24px 0 8px
         }
+        .category-forms-holder-message {
+            font-family: 'Public Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 18px;
+            color: #212121;
+            margin-bottom: 16px;
+        }
+
         .category-forms-holder {
             width: 100%;
-        }
-            
-        .required {
-            background: #006546;
-            font-family: 'Public Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 19px;
-            align-items: center;
-            text-align: center;
-            color: #FFFFFF;
-        }
-
-        .recomended {
-            background: #DBEDE0;
-            font-family: 'Public Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 19px;
-            align-items: center;
-            text-align: center;
-            color: #111221;
-        }
-
-        .additional {
-            background: #F7F7F7;
-            font-family: 'Public Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 19px;
-            align-items: center;
-            text-align: center;
-            color: #111221;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 2rem;
         }
 
         .category-forms-card {
             max-width: 30%;
-            height: 100%;
-            border: 1px solid #111221;
-            border-top: 6px solid #006546;
+            height: 1fr;
+            border: 1px solid #BBBBBB;
+            border-top: 5px solid #006546;
             display: flex;
             flex-direction: column;
-
+            justify-content: center;
+            align-items: center;
         }
             .category-forms-card-content {
-                width: 100%;
+                max-width: 100%;
                 height: 100%;
-                padding: 1rem;
+                margin: 0px;
+                flex: 0 0 100%;
             }
 
+            .form-name {
+                font-family: 'Public Sans';
+                font-style: bold;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 18px;
+                color: #006546;
+                margin: 24px 0 8px;
+                padding: 0 16px;
+            }
+            
+            .form-description-text {
+                font-family: 'Public Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 18px;
+                color: #212121;
+                margin-bottom: 16px;
+                min-height: 100%;
+                margin: 24px 0 ;
+                padding: 0 16px;
+            }
+
+            .required {
+                background: #006546;
+                color: #FFFFFF;
+                font-family: 'Public Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+            }
+
+            .recomended {
+                background: #DBEDE0;
+                color: #212121;
+                font-weight: 400;
+                font-family: 'Public Sans';
+                font-style: normal;
+                font-size: 16px;
+                line-height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+            }
+
+            .additional {
+                background: #F7F7F7;
+                color: #111221;
+                font-family: 'Public Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+            }
     .button-container {
         display: flex;
         flex-direction: row;
-        column-gap: 2rem;
+        column-gap: 8px;
+        margin-bottom: 24px;
+        padding: 0 16px;
     }
         .button-holder {
             border-radius: 4px;
             font-family: 'Public Sans';
-            font-style: normal;
+            font-style: bold;
             font-weight: 700;
             font-size: 16px;
-            line-height: 19px;
+            line-height: 20px;
             text-align: center;
-            max-width: 100%;
+            max-width: 50%;
             padding: 1rem;
         }
         .button-blue {
@@ -125,7 +179,7 @@
     <div class="container">
         <div class="row">
             <div class="primary-region medium-12">
-                <h1 class="primary-region__title" id="title-holder"> <!-- calculated in script --> </h1>
+                <h1 class="primary-region__title title-holder" id="title-holder"> <!-- calculated in script --> </h1>
             </div>
         </div>
     </div>
@@ -134,7 +188,6 @@
     <div class="container">
         <div class="farmers-landing-page row">
             <div class="primary-region medium-12" id="primary-region">
-      
                 <div class="primary-region__header" >
                     <div id="header-holder"> </div>
                     <div id="header-info-holder"> 
@@ -144,7 +197,7 @@
                             <li>At no point in this process is any information saved to, or shared with USDA staff or systems; and</li>
                             <li>You care encouraged to reach out to your Local Service Center if you have any further questions or concerns.</li>
                         </ul>
-
+                        <div class="return-form-suport" id="return-form-suport"></div>
                         <!-- Yellow warning --> 
                         <div class="warning-container">
                             <div class="warning-left-bar"> </div>
@@ -178,7 +231,6 @@
                             </div>
                         </div>
                     </div>
-                    <div id="return-form-suport"></div>
                 </div>
             </div>
         </div>
@@ -319,10 +371,12 @@
         // Title of support page
         var titleText = `<div class="col">
                             <div class="loantype-title">    
-                                <div class="">
-                                    <a href="" onclick="showAllLoans();return false;" data-label="/loanforms.html" aria-label="Go to Form Support Page" data-category="Loans">
-                                        <img class="loantype-title-back image-flip" src="./images/arrow-right.png" alt="Back arrow" width="32">
-                                    </a>
+                                <div class="quiz-back-container">
+                                    <div class="quiz-back" id="quiz-back" style="">
+                                        <a onclick="showAllLoans();return false;" aria-label="Go to Form Support Page">
+                                            <img src="./images/angle-arrow-down.png" height="20" width="20" alt="Back to loans pages" style="margin-right:40px; transform: rotate(90deg);">
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="loantype-title-name">
                                     <div>${loanName} Form Support</div>
@@ -348,7 +402,7 @@
             var categoryFormsContainer = document.createElement("div");
             categoryFormsContainer.classList.add("category-forms-container-reuired");
 
-{                   //Do first
+{           //Do first
             var title = document.createElement("div");}
             title.classList.add("category-forms-holder-title");
             title.textContent = "Do first";
@@ -365,7 +419,7 @@
             $.each(categoryForms['formsRequired'], function(key, formId) {
                 var form = forms.find((x)=> x.id == formId)
                 if(form !== undefined) {
-                    categoryFormsHolder.append(_createCard(form, "Required"));
+                    categoryFormsHolder.append(_createCard(form, "REQUIRED"));
                     formIds.push(formId);
                 }
             });
@@ -395,7 +449,7 @@
             $.each(categoryForms['formsRecommended'], function(key, formId) {
                 var form = forms.find(x=> x.id == formId)
                 if(form !== undefined) {
-                    categoryFormsHolder.append(_createCard(form, "Recommended"));
+                    categoryFormsHolder.append(_createCard(form, "RECOMENDED"));
                     formIds.push(form);
                 }
             });
@@ -426,7 +480,7 @@
                 var form = forms.find(x=> x.id == formId)
                 
                 if(form !== undefined) {
-                    categoryFormsHolder.append(_createCard(form, "Additional"));
+                    categoryFormsHolder.append(_createCard(form, "ADDITIONAL"));
                     formIds.push(form);
                 }
             });
@@ -434,7 +488,7 @@
             $("#forms-holder").append(categoryFormsContainer);
         }
         
-        $('#return-form-suport').html(`<a href="" onclick="showAllLoans();return false;"  class="page-link" data-label="" aria-label="Go to Form Support Page" data-category="Loans">See all loan types</a>`);
+        $('#return-form-suport').html(`<a href="" onclick="showAllLoans();return false;"  class="" data-label="" aria-label="Go to Form Support Page" data-category="Loans">See all loan types</a>`);
     }
 
     // Draw search results
@@ -487,19 +541,18 @@
 
     // 
     function _createCard(form, required) {
-
         var new_card = document.createElement("div");
         new_card.classList.add("category-forms-card");
 
         var requirementType = document.createElement("div");
         switch(required) {
-            case "Required":
+            case "REQUIRED":
                 requirementType.classList.add("required"); // style in this file
                 break;
-            case "Recommended":
+            case "RECOMENDED":
                 requirementType.classList.add("recomended"); // style in this file
                 break;
-            case "Additional":
+            case "ADDITIONAL":
                 requirementType.classList.add("additional"); // style in this file
                 break;
             default:
@@ -507,14 +560,15 @@
 
         
         requirementType.textContent = required
-        new_card.append(requirementType);
         
         var contentHolder = document.createElement("div");
         contentHolder.classList.add("category-forms-card-content");
         
+        contentHolder.append(requirementType);
+
         var headline;
         headline = document.createElement("div");
-        headline.classList.add("headline");
+        headline.classList.add("form-name");
         var h3;
         h3 = document.createElement("h3");
         h3.innerHTML = `<a href="" onclick="loadForm('${form.id}');return false;" "class="text-link" id="${form.id}">${form.name} </a>`
@@ -526,11 +580,11 @@
         description.classList.add("content");
 
         var descriptionText = document.createElement("p");
+        descriptionText.classList.add("form-description-text");
         descriptionText.textContent = form.description;
         description.append(descriptionText);
 
         contentHolder.append(description);
-
 
         var buttonContainer = document.createElement("div");
         buttonContainer.classList.add("button-container"); // style in this file
